--- a/mongo-sharding-repl/compose.yaml
+++ b/mongo-sharding-repl/compose.yaml
@@ -1,4 +1,3 @@
-version: '3'
 services:
   configSrv:
     image: mongo:latest
@@ -41,7 +40,7 @@ services:
       [
         "--shardsvr",
         "--replSet",
-        "repl_1",
+        "testRepl_1",
         "--bind_ip_all",
         "--port",
         "27018"
@@ -66,7 +65,7 @@ services:
       [
         "--shardsvr",
         "--replSet",
-        "repl_2",
+        "testRepl_2",
         "--bind_ip_all",
         "--port",
         "27019"
