--- a/mongo-sharding/compose.yaml
+++ b/mongo-sharding/compose.yaml
@@ -41,7 +41,7 @@ services:
       [
         "--shardsvr",
         "--replSet",
-        "repl_1",
+        "testRepl",
         "--bind_ip_all",
         "--port",
         "27018"
@@ -66,7 +66,7 @@ services:
       [
         "--shardsvr",
         "--replSet",
-        "repl_2",
+        "testRepl",
         "--bind_ip_all",
         "--port",
         "27019"
